; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_wifi.c_wifi_station_clear_config.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_wifi.c_wifi_station_clear_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.station_config = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @wifi_station_clear_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wifi_station_clear_config(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.station_config, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 1, i32* %4, align 4
  store i32 1, i32* %5, align 4
  %7 = call i32 @memset(%struct.station_config* %3, i32 0, i32 4)
  %8 = call i32 (...) @wifi_station_disconnect()
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @wifi_station_set_config(%struct.station_config* %3)
  store i32 %12, i32* %6, align 4
  br label %15

13:                                               ; preds = %1
  %14 = call i32 @wifi_station_set_config_current(%struct.station_config* %3)
  store i32 %14, i32* %6, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = call i32 @wifi_station_set_auto_connect(i32 0)
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @lua_pushboolean(i32* %17, i32 %18)
  ret i32 1
}

declare dso_local i32 @memset(%struct.station_config*, i32, i32) #1

declare dso_local i32 @wifi_station_disconnect(...) #1

declare dso_local i32 @wifi_station_set_config(%struct.station_config*) #1

declare dso_local i32 @wifi_station_set_config_current(%struct.station_config*) #1

declare dso_local i32 @wifi_station_set_auto_connect(i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
